# persona-genesis

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: roadmap.md
docs/superpowers/plans/: 2026-06-01-foundation-implementation-plan.md  2026-06-01-foundation.md  2026-06-04-entities-provenance-contract.md  (+2 more)
specs/: 2026-06-01-persona-genesis-library-design.md  2026-06-02-persona-genesis-builder-realism-media-design.md  2026-06-04-persona-genesis-entities-embeddings-rag-provenance-design.md  2026-06-06-persona-genesis-structured-generation-design.md  2026-06-08-persona-genesis-narrative-generation-design.md
src/persona_genesis/: __init__.py  builder.py  coherence.py  config.py  exceptions.py  extraction.py  orchestrator.py
tests/: conftest.py
tests/integration/: test_llm_live.py  test_repository.py
tests/unit/: test_builder.py  test_coherence.py  test_config.py  test_constraints.py  test_data.py  test_db_crypto.py  test_db_engine.py  test_db_models.py  test_exceptions.py  test_extraction.py  test_fake_llm.py  test_gen_device.py  test_gen_identity.py  test_gen_location.py  test_gen_work.py  test_geo_base.py  test_geoip2_locator.py  test_media_storage.py  test_narrative_generator.py  test_narrative_payload.py  test_openai_compat.py  test_orchestrator.py  test_provider_factory.py  test_providers.py  test_public_api.py  test_recorded_provider.py  test_recorded_snapshot.py  test_schema_account.py  test_schema_appearance.py  test_schema_backstory.py  test_schema_biometrics.py  test_schema_contact.py  test_schema_device.py  test_schema_document.py  test_schema_draft.py  test_schema_identity.py  test_schema_location.py  test_schema_media.py  test_schema_metadata.py  test_schema_partial.py  (+8 more)
(+54 files in other folders)
