[project]
name = "persona-genesis"
version = "0.1.0"
description = "Generate highly detailed, coherent personas (structured + narrative + visual)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Tarsow", email = "tarsowdev@gmail.com" }]
dependencies = [
    "pydantic>=2.6",
    "faker>=24",
    "polyfactory>=2.15",
    "fake-useragent>=1.5",
    "httpx>=0.27",
    "Pillow>=10",
    "anyio>=4",
    "sqlalchemy[asyncio]>=2",
    "psycopg[binary]>=3",
    "pgvector>=0.3",
    "cryptography>=42",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
local-image = ["torch>=2.3", "diffusers>=0.27", "transformers>=4.40", "accelerate>=0.30"]
cli = ["typer>=0.12", "rich>=13"]
all = [
    "anthropic>=0.40",
    "openai>=1.40",
    "torch>=2.3",
    "diffusers>=0.27",
    "transformers>=4.40",
    "accelerate>=0.30",
    "typer>=0.12",
    "rich>=13",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_genesis"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["persona_genesis"]

[[tool.mypy.overrides]]
module = ["fake_useragent.*", "polyfactory.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
asyncio_mode = "auto"
